--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,3 @@
-# project name
-project(libAkaiMpd)
-
-# CMake version
-cmake_minimum_required(VERSION 2.6)
-
-# program
-set(_SOURCES device.cpp devicemanager.cpp main.cpp)
-set(_HEADERS device.h devicemanager.h utils.h)
-add_executable(akaimpd ${_SOURCES} ${_HEADERS})
-
-target_link_libraries (akaimpd asound) 
-
 # program version
 set(libAkaiMpd_VERSION_MAJOR 0)
 set(libAkaiMpd_VERSION_MINOR 1)
@@ -18,10 +5,11 @@ set(libAkaiMpd_VERSION_MINOR 1)
 # options
 set(CMAKE_BUILD_TYPE    None)
 set(CMAKE_CXX_FLAGS    "-std=c++11 -Wno-c++11-compat​​​​​​​​​​​​​​​​​​​ ${CMAKE_CXX_LINK_FLAGS}")
-set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_FLAGS} -lasound ")
 
-if(LINUX)
-    message("Unix")
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    message("Linux")
+    subdirs(linux)
+    
 elseif(WIN32)
     message("Win32")
 elseif(APPLE)
@@ -29,3 +17,4 @@ elseif(APPLE)
 else()
     message("Another")
 endif()
+
