added InputThread to CMakeLists

--- a/examples/QtExample/CMakeLists.txt
+++ b/examples/QtExample/CMakeLists.txt
@@ -2,9 +2,9 @@ find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
  
 qt4_wrap_ui(UISrcs mainwindow.ui)
-qt4_wrap_cpp(MOCSrcs mainwindow.h)
+qt4_wrap_cpp(MOCSrcs mainwindow.h inputthread.h)
  
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ../../src/linux)
 
-add_executable(QtExample main.cpp mainwindow.cpp ${MOCSrcs} ${UISrcs})
+add_executable(QtExample main.cpp mainwindow.cpp inputthread.cpp ${MOCSrcs} ${UISrcs})
 target_link_libraries(QtExample ${QT_LIBRARIES} akaimpd)
