--- a/examples/QtExample/CMakeLists.txt
+++ b/examples/QtExample/CMakeLists.txt
@@ -4,7 +4,13 @@ include(${QT_USE_FILE})
 qt4_wrap_ui(UISrcs mainwindow.ui)
 qt4_wrap_cpp(MOCSrcs mainwindow.h inputthread.h)
  
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ../../src/linux)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${libAkaiMpd_SOURCE_DIR}/src/linux)
+elseif(WIN32)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${libAkaiMpd_SOURCE_DIR}/src/win32)
+endif()
+
+set(CMAKE_CXX_FLAGS    "-std=c++11 ${CMAKE_CXX_LINK_FLAGS}")
 
 add_executable(QtExample main.cpp mainwindow.cpp inputthread.cpp ${MOCSrcs} ${UISrcs})
 target_link_libraries(QtExample ${QT_LIBRARIES} akaimpd)
